# stub-cpp-cmake

./: CMakeLists.txt  Doxyfile.in  README.md  project.json
cmake/: boost.cmake  buildflags.cmake  checklocale.cmake  compilerdetect.cmake  config.cmake  cpack.cmake  ctest.cmake  doxygen.cmake  githooks.cmake  host.cmake  processorcount.cmake  submodules.cmake
src/: CMakeLists.txt  Foo.cpp  Foo.hpp  config.hpp.in
src/features/: CMakeLists.txt  FooFeature.cpp  FooFixture.hpp
